added aria label to burger

--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -3,7 +3,7 @@
   <div class="container">
     <button type="button" class="menu-button" data-menu-button>
       <svg class="menu-icon">
-        <use href="./images/icons.svg#Burger_menu"></use>
+        <use href="./images/icons.svg#Burger_menu" aria-label="open mobile menu"></use>
       </svg>
     </button>
     <div class="logo-wrapper">
