added overlay to products section.

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,8 +1,9 @@
+
 <section class="products">
     <div class="container">
     <p class="products__suptitle">100% natural</p>
     <h2 id="products" class="products__title">Products</h2>
-    <ul class="products__list">
+    <ul class="products__list list">
 
         <li class="products__item">
             <div class="product-icecream">
@@ -10,7 +11,6 @@
                 <img class="products_image" 
                 src="./images/mobile/products/icecream.png" 
                 alt="cone with two scoops of icecream">
-                <div class="product__overlay">
                     <picture>
                         <source srcset="
                             ./images/desktop/products/icecream.webp 1x, 
@@ -43,33 +43,38 @@
                             alt="cone with two scoops of icecream">
                     </picture>
 
-                    <!-- <p class="product__popup">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur.
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                        id est laborum
-                    </p> -->
-                </div>
-
                 <h3 class="product__sub-header">Ice Cream</h3>
 
                 <svg class="product__icon--dots">
                     <use href="./images/icons.svg#dot_3"></use>
                 </svg>
-
                 <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <div class="product__link--wrap">
-                    <a href="" class="product__link">
+                
+                    <div class="product__link--wrap">
+                    <a class="product__link" href="#popup1">
                     <svg class="product__icon">
                         <use href="./images/icons.svg#arrow_right_long"></use>
                     </svg>
                 </a>
+                
+
+        <div class="product__overlay" id="popup1">
+            <div class="product__popup">
+                <a class="product__close" href="#products">&times;</a>
+                <div class="product__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                    labore et dolore magna
+                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                    commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                    pariatur.
                 </div>
+            </div>
+        </div>
+
+
+            </div>
             </div>
         </li>
 
@@ -77,7 +82,7 @@
             <div class="product-icecoffee">
         
                 <img class="products_image" src="./images/mobile/products/ice-coffee.png" alt="tall glass of ice coffee with a straw">
-                <div class="product__overlay">
+                
                             <picture>
                                 <source srcset="
                                     ./images/desktop/products/ice-coffee.webp 1x, 
@@ -109,18 +114,7 @@
                                 <img class="products_image" src="./images/mobile/products/ice-coffee.png"
                                     alt="cone with two scoops of icecream">
                             </picture>
-        
-                            <!-- <p class="product__popup">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna
-                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                                id est laborum
-                            </p> -->
-                        </div>
+    
         
                 <h3 class="product__sub-header">Ice Coffee</h3>
         
@@ -131,11 +125,28 @@
                 <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <div class="product__link--wrap">
-                    <a href="" class="product__link">
+                    <a class="product__link" href="#popup2">
                         <svg class="product__icon">
                             <use href="./images/icons.svg#arrow_right_long"></use>
                         </svg>
                     </a>
+                
+                
+                    <div class="product__overlay" id="popup2">
+                        <div class="product__popup2">
+                            <a class="product__close" href="#products">&times;</a>
+                            <div class="product__content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                commodo consequat.
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                pariatur.
+                            </div>
+                        </div>
+                    </div>
+                
+                
                 </div>
             </div>
         </li>
@@ -144,7 +155,7 @@
             <div class="product-milkshakes">
         
                 <img class="products_image" src="./images/mobile/products/milkshake.png" alt="cone with two scoops of icecream">
-                <div class="product__overlay">
+                
                             <picture>
                                 <source srcset="
                                     ./images/desktop/products/milkshake.webp 1x, 
@@ -176,18 +187,7 @@
                                 <img class="products_image" src="./images/mobile/products/milkshake.png"
                                     alt="cone with two scoops of icecream">
                             </picture>
-        
-                            <!-- <p class="product__popup">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna
-                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                                id est laborum
-                            </p> -->
-                        </div>
+       
         
                 <h3 class="product__sub-header">Milkshakes</h3>
         
@@ -198,11 +198,28 @@
                 <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
                     tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
                 <div class="product__link--wrap">
-                    <a href="" class="product__link">
+                    <a class="product__link" href="#popup3">
                         <svg class="product__icon">
                             <use href="./images/icons.svg#arrow_right_long"></use>
                         </svg>
                     </a>
+                
+                
+                    <div class="product__overlay" id="popup3">
+                        <div class="product__popup3">
+                            <a class="product__close" href="#products">&times;</a>
+                            <div class="product__content">
+                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                                labore et dolore magna
+                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+                                commodo consequat.
+                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
+                                pariatur.
+                            </div>
+                        </div>
+                    </div>
+                
+                
                 </div>
             </div>
         </li>
