--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,29 +1,29 @@
 <footer class="footer"> 
 <div class="container">
     <div class="title-and-social-wrapper">
-    <div class="title-wrapper">
+    <div class="wrapper-title">
 <p class="subtitle">homemade ice cream made</p>
 <h2 class="section-title"> with passion </h2>
 </div>
-<div class="social-and-call-wrapper">
+<div class="social-and-call-wrapper" id="contact">
 <ul class="social-list list">
     <li class="social-list__item">
         <a class="social-list__link link" href="https://github.com/" target="_blank" rel="noopener noreferrer">
-        <svg class="social-list__icon" width="18" height="18">
+        <svg class="social-list__icon-github" width="18" height="18">
             <use href="./images/icons.svg#github"></use>
         </svg>
     </a>
     </li>
     <li class="social-list__item">
         <a class="social-list__link link"  href="https://telegram.org/" target="_blank" rel="noopener noreferrer">
-    <svg class="social-list__icon" width="18" height="14">
+    <svg class="social-list__icon-telegram" width="18" height="14">
         <use href="./images/icons.svg#telegram"></use>
     </svg>
     </a>
     </li>
     <li class="social-list__item">
         <a class="social-list__link link"  href="https://www.facebook.com/" target="_blank" rel="noopener noreferrer">
-    <svg class="social-list__icon" width="8" height="18">
+    <svg class="social-list__icon-facebook" width="8" height="18">
         <use href="./images/icons.svg#facebook"></use>
     </svg>
     </a>
@@ -34,8 +34,8 @@
 </b>
 </div>
 </div>
-<div class="copyright-wrapper"> 
+<div class="copyright-wrapper"></div>
    <p class="copyright"> &copy;2019 - IceCream. All Rights Reserved. </p>
-</div>
+
 </div>
 </footer>
