--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,52 +1,17 @@
 .footer {
   padding-top: 56px;
-  // padding-bottom: 25px;
   background-color: var(--background-color-main);
 }
-.social-list {
-  display: flex;
-  justify-content: flex-end;
-  align-items: center;
-  margin-top: 43px;
-  margin-bottom: 46px;
-
-  &__item {
-    display: flex;
-
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-
-    background-color: var(--accent-color-secondary);
-
-    &:not(:last-child) {
-      margin-right: 22px;
-    }
-  }
-  &__link {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-
-    width: 32px;
-    height: 32px;
-    border-radius: 50%;
-
-    transition: background-color 250ms var(--timing-function);
-
-    &:hover,
-    &:focus {
-      background-color: var(--accent-color-main);
-    }
-  }
+.wrapper-title {
+  width: 232px;
 }
 
 .call {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 43px;
+  font-weight: 700;
   font-size: 12px;
-  line-height: 1.8;
   text-align: right;
   color: var(--secondary-text-color);
 
@@ -62,14 +27,15 @@
 }
 
 .copyright-wrapper {
-  // width: 100vw;
+  width: 100vw;
+  // height: 1px;
+  // background-color: #e1e1e1;
   border-top: 1px solid #e1e1e1;
-  padding-top: 22px;
-  padding-bottom: 25px;
 }
 .copyright {
   width: 150px;
-  // height: 42px;
+  padding-top: 22px;
+  padding-bottom: 25px;
 
   margin-left: auto;
   margin-right: auto;
@@ -85,29 +51,10 @@
   .footer {
     padding-top: 82px;
   }
-  .title-wrapper {
+  .wrapper-title {
     min-width: 340px;
   }
-  .social-list {
-    margin-top: 0;
 
-    &__link {
-      width: 34px;
-      height: 34px;
-    }
-    &__icon {
-      width: 20px;
-      height: 20px;
-
-      &:nth-child(2) {
-        height: 18px;
-      }
-      &:nth-child(3) {
-        width: 8px;
-        height: 20px;
-      }
-    }
-  }
   .call {
     margin-bottom: 175px;
     font-size: 14px;
@@ -116,12 +63,32 @@
     display: flex;
   }
   .copyright {
-    min-width: 276px;
-    line-height: 1.8;
-    letter-spacing: 0.02em;
-  }
-  .copyright-wrapper {
     padding-top: 29px;
     padding-bottom: 18px;
+    min-width: 276px;
+    line-height: 1.85;
+    letter-spacing: 0.02em;
+  }
+}
+
+@media screen and (min-width: 1280px) {
+  .wrapper-title {
+    min-width: 500px;
+  }
+
+  .call {
+    margin-bottom: 98px;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.02em;
+  }
+
+  .title-and-social-wrapper {
+    justify-content: space-between;
+  }
+
+  .copyright {
+    padding-top: 9px;
+    padding-bottom: 10px;
   }
 }
