fixed overlay, button

--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -47,8 +47,8 @@
     <p class="about__subtext">Aliquam erat volutpat. Aenean accumsan.</p>
 
     <button class="about-button" type="submit">Read more
-        <svg width="4.5px" height="8px" class="about-btn__icon">
-            <use href=./images/icons.svg#arrow_right_short>
+        <svg width="10px" height="10px" class="about-btn__icon">
+            <use href="./images/icons.svg#arrow_right_short"> 
             </use>
         </svg>
     </button>
