--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,16 +1,14 @@
 <section class="products">
     <div class="container">
-    <p class="products__suptitle">100% natural</p>
-    <h2 id="products" class="products__title">Products</h2>
-    <ul class="products__list">
+        <p class="products__suptitle">100% natural</p>
+        <h2 id="products" class="products__title">Products</h2>
+        <ul class="products__list list">
 
-        <li class="products__item">
-            <div class="product-icecream">
+            <li class="products__item">
+                <div class="product-icecream">
 
-                <img class="products_image" 
-                src="./images/mobile/products/icecream.png" 
-                alt="cone with two scoops of icecream">
-                <div class="product__overlay">
+                    <img class="products_image" src="./images/mobile/products/icecream.png"
+                        alt="cone with two scoops of icecream">
                     <picture>
                         <source srcset="
                             ./images/desktop/products/icecream.webp 1x, 
@@ -43,170 +41,201 @@
                             alt="cone with two scoops of icecream">
                     </picture>
 
-                    <!-- <p class="product__popup">
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna
-                        aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                        commodo consequat.
-                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                        pariatur.
-                        Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                        id est laborum
-                    </p> -->
-                </div>
+                    <h3 class="product__sub-header">Ice Cream</h3>
 
-                <h3 class="product__sub-header">Ice Cream</h3>
-
-                <svg class="product__icon--dots">
-                    <use href="./images/icons.svg#dot_3"></use>
-                </svg>
-
-                <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <div class="product__link--wrap">
-                    <a href="" class="product__link">
-                    <svg class="product__icon">
-                        <use href="./images/icons.svg#arrow_right_long"></use>
+                    <svg class="product__icon--dots">
+                        <use href="./images/icons.svg#dot_3"></use>
                     </svg>
-                </a>
-                </div>
-            </div>
-        </li>
+                    <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod
+                        tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
 
-        <li class="products__item">
-            <div class="product-icecoffee">
-        
-                <img class="products_image" src="./images/mobile/products/ice-coffee.png" alt="tall glass of ice coffee with a straw">
-                <div class="product__overlay">
-                            <picture>
-                                <source srcset="
+                    <div class="product__link--wrap">
+                        <a class="product__link" href="#popup1">
+                            <svg class="product__icon">
+                                <use href="./images/icons.svg#arrow_right_long"></use>
+                            </svg>
+                        </a>
+
+
+                        <div class="product__overlay" id="popup1">
+                            <div class="product__popup">
+                                <a class="product__close" href="#products">&times;</a>
+                                <div class="product__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna
+                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                    aliquip ex ea
+                                    commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                                    fugiat nulla
+                                    pariatur.
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </li>
+
+            <li class="products__item">
+                <div class="product-icecoffee">
+
+                    <img class="products_image" src="./images/mobile/products/ice-coffee.png"
+                        alt="tall glass of ice coffee with a straw">
+
+                    <picture>
+                        <source srcset="
                                     ./images/desktop/products/ice-coffee.webp 1x, 
                                     ./images/desktop/products/ice-coffee@2x.webp 2x" media="(min-width: 1200px)"
-                                    type="image/webp" />
-        
-                                <source srcset="
+                            type="image/webp" />
+
+                        <source srcset="
                                     ./images/desktop/products/ice-coffee.png 1x, 
                                     ./images/desktop/products/ice-coffee@2x.png 2x" media="(min-width: 1200px)" />
-        
-                                <source srcset="
+
+                        <source srcset="
                                     ./images/tablet/products/ice-coffee.webp 1x, 
                                     ./images/tablet/products/ice-coffee@2x.webp 2x" media="(min-width: 768px)"
-                                    type="image/webp" />
-        
-                                <source srcset="
+                            type="image/webp" />
+
+                        <source srcset="
                                     ./images/tablet/products/icecream.png 1x, 
                                     ./images/tablet/products/icecream@2x.png 2x" media="(min-width: 768px)" />
-        
-                                <source srcset="
+
+                        <source srcset="
                                     ./images/mobile/products/ice-coffee.webp 1x, 
                                     ./images/mobile/products/ice-coffee@2x-1.webp 2x" media="(min-width: 320px)"
-                                    type="image/webp" />
-        
-                                <source srcset="
+                            type="image/webp" />
+
+                        <source srcset="
                                     ./images/mobile/products/ice-coffee.png 1x, 
                                     ./images/mobile/products/ice-coffee@2x-1.png 2x" media="(min-width: 320px)" />
-        
-                                <img class="products_image" src="./images/mobile/products/ice-coffee.png"
-                                    alt="cone with two scoops of icecream">
-                            </picture>
-        
-                            <!-- <p class="product__popup">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna
-                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                                id est laborum
-                            </p> -->
-                        </div>
-        
-                <h3 class="product__sub-header">Ice Coffee</h3>
-        
-                <svg class="product__icon--dots">
-                    <use href="./images/icons.svg#dot_3"></use>
-                </svg>
-        
-                <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <div class="product__link--wrap">
-                    <a href="" class="product__link">
-                        <svg class="product__icon">
-                            <use href="./images/icons.svg#arrow_right_long"></use>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </li>
 
-        <li class="products__item">
-            <div class="product-milkshakes">
-        
-                <img class="products_image" src="./images/mobile/products/milkshake.png" alt="cone with two scoops of icecream">
-                <div class="product__overlay">
-                            <picture>
-                                <source srcset="
+                        <img class="products_image" src="./images/mobile/products/ice-coffee.png"
+                            alt="cone with two scoops of icecream">
+                    </picture>
+
+
+                    <h3 class="product__sub-header">Ice Coffee</h3>
+
+                    <svg class="product__icon--dots">
+                        <use href="./images/icons.svg#dot_3"></use>
+                    </svg>
+
+                    <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod
+                        tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <div class="product__link--wrap">
+                        <a class="product__link" href="#popup2">
+                            <svg class="product__icon">
+                                <use href="./images/icons.svg#arrow_right_long"></use>
+                            </svg>
+                        </a>
+
+
+                        <div class="product__overlay" id="popup2">
+                            <div class="product__popup2">
+                                <a class="product__close" href="#products">&times;</a>
+                                <div class="product__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna
+                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                    aliquip ex ea
+                                    commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                                    fugiat nulla
+                                    pariatur.
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </li>
+
+            <li class="products__item">
+                <div class="product-milkshakes">
+
+                    <img class="products_image" src="./images/mobile/products/milkshake.png"
+                        alt="cone with two scoops of icecream">
+
+                    <picture>
+                        <source srcset="
                                     ./images/desktop/products/milkshake.webp 1x, 
                                     ./images/desktop/products/milkshake@2x.webp 2x" media="(min-width: 1200px)"
-                                    type="image/webp" />
-        
-                                <source srcset="
+                            type="image/webp" />
+
+                        <source srcset="
                                     ./images/desktop/products/milkshake.png 1x, 
                                     ./images/desktop/products/milkshake@2x.png 2x" media="(min-width: 1200px)" />
-        
-                                <source srcset="
+
+                        <source srcset="
                                     ./images/tablet/products/milkshake.webp 1x, 
                                     ./images/tablet/products/milkshake@2x.webp 2x" media="(min-width: 768px)"
-                                    type="image/webp" />
-        
-                                <source srcset="
+                            type="image/webp" />
+
+                        <source srcset="
                                     ./images/tablet/products/milkshake.png 1x, 
                                     ./images/tablet/products/milkshake@2x.png 2x" media="(min-width: 768px)" />
-        
-                                <source srcset="
+
+                        <source srcset="
                                     ./images/mobile/products/milkshake.webp 1x, 
                                     ./images/mobile/products/milkshake@2x.webp 2x" media="(min-width: 320px)"
-                                    type="image/webp" />
-        
-                                <source srcset="
+                            type="image/webp" />
+
+                        <source srcset="
                                     ./images/mobile/products/milkshake.png 1x, 
                                     ./images/mobile/products/milkshake@2x.png 2x" media="(min-width: 320px)" />
-        
-                                <img class="products_image" src="./images/mobile/products/milkshake.png"
-                                    alt="cone with two scoops of icecream">
-                            </picture>
-        
-                            <!-- <p class="product__popup">
-                                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                                labore et dolore magna
-                                aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
-                                commodo consequat.
-                                Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla
-                                pariatur.
-                                Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim
-                                id est laborum
-                            </p> -->
-                        </div>
-        
-                <h3 class="product__sub-header">Milkshakes</h3>
-        
-                <svg class="product__icon--dots">
-                    <use href="./images/icons.svg#dot_3"></use>
-                </svg>
-        
-                <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
-                    tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
-                <div class="product__link--wrap">
-                    <a href="" class="product__link">
-                        <svg class="product__icon">
-                            <use href="./images/icons.svg#arrow_right_long"></use>
-                        </svg>
-                    </a>
-                </div>
-            </div>
-        </li>
 
-    </ul>
+                        <img class="products_image" src="./images/mobile/products/milkshake.png"
+                            alt="cone with two scoops of icecream">
+                    </picture>
+
+
+                    <h3 class="product__sub-header">Milkshakes</h3>
+
+                    <svg class="product__icon--dots">
+                        <use href="./images/icons.svg#dot_3"></use>
+                    </svg>
+
+                    <p class="product_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+                        eiusmod
+                        tempor incididunt ut labore et. dolore magna aliqua facilisis.</p>
+                    <div class="product__link--wrap">
+                        <a class="product__link" href="#popup3">
+                            <svg class="product__icon">
+                                <use href="./images/icons.svg#arrow_right_long"></use>
+                            </svg>
+                        </a>
+
+
+                        <div class="product__overlay" id="popup3">
+                            <div class="product__popup3">
+                                <a class="product__close" href="#products">&times;</a>
+                                <div class="product__content">
+                                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
+                                    incididunt ut
+                                    labore et dolore magna
+                                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut
+                                    aliquip ex ea
+                                    commodo consequat.
+                                    Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu
+                                    fugiat nulla
+                                    pariatur.
+                                </div>
+                            </div>
+                        </div>
+
+
+                    </div>
+                </div>
+            </li>
+
+        </ul>
     </div>
 </section>
