--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -37,7 +37,7 @@
           <use href="./images/icons.svg#close_icon"></use>
         </svg>
       </button>
-      <button class="modal-btn" type="button">Buy now ></button>
+      <button class="modal-btn" type="button" data-modal-open>Buy now ></button>
       <ul class="mobile-menu__list list">
         <li class="mobile-menu__item">
           <a href="#home" class="mobile-menu__link link">Home</a>
