adds z-index to backdrop

--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,6 +1,10 @@
 .is-hidden .modal {
   transform: translate(-50%, -50%) scale(0.9);
 }
+
+.backdrop {
+  z-index: 100;
+}
 .modal {
   position: absolute;
   z-index: 1000;
