--- a/src/partials/header-hero.html
+++ b/src/partials/header-hero.html
@@ -8,7 +8,7 @@
     </button>
     <div class="logo-wrapper">
       <a class="logo link" href="">
-        <img class="logo-img" src="./images/mobile/logo/logo1.png" alt="logo image" width="199" />
+        <img class="logo-img animate__animated animate__flip" src="./images/mobile/logo/logo1.png" alt="logo image" width="199" />
       </a>
     </div>
     <nav class="navigation">
@@ -77,7 +77,7 @@
         </div>
 
         <div class="hero__counters-wrapper">
-          <ul class="counters-list list">
+          <ul class="counters-list list animate__animated animate__shakeY">
             <li class="counters-list__item">              
               16<br /><span class="counters-list__item-plaintext">cafes</span> <div class="counters-list__ellipse">
               </div>
@@ -104,7 +104,7 @@
           " media="(min-width: 320px)" />
         <img class="hero__image" src="./images/desktop/hero/slider-icecream_dt.png" alt="Ice cream" />
       </picture>
-      <div class="ellipse"></div>
+      <div class="ellipse animate__animated animate__heartBeat"></div>
       <div class="hero__bioeco-info">
         <picture>
           <source srcset="
@@ -115,7 +115,7 @@
               ./images/tablet/hero/slider-milkjug_tb.png    1x,
               ./images/tablet/hero/slider-milkjug_tb@2x.png 2x
             " media="(min-width: 768px)" />
-          <img class="hero__bioeco-info-image" src="./images/desktop/hero/slider-milkjug_dt.png" alt="milk jug" />
+          <img class="hero__bioeco-info-image animate__animated animate__heartBeat" src="./images/desktop/hero/slider-milkjug_dt.png" alt="milk jug" />
         </picture>
         <p class="hero__bioeco-info-text">
           <a href="#">
