add border in footer

--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -1,6 +1,10 @@
 .footer {
   padding-top: 56px;
   background-color: var(--background-color-main);
+  background-image: linear-gradient(#e1e1e1, #e1e1e1);
+  background-repeat: no-repeat;
+  background-size: 100% 1px;
+  background-position: left 375px;
 }
 .wrapper-title {
   width: 232px;
@@ -26,12 +30,6 @@
   }
 }
 
-.copyright-wrapper {
-  width: 100vw;
-  // height: 1px;
-  // background-color: #e1e1e1;
-  border-top: 1px solid #e1e1e1;
-}
 .copyright {
   width: 150px;
   padding-top: 22px;
@@ -50,6 +48,7 @@
 @media screen and (min-width: 768px) {
   .footer {
     padding-top: 82px;
+    background-position: left 362px;
   }
   .wrapper-title {
     min-width: 340px;
@@ -72,6 +71,9 @@
 }
 
 @media screen and (min-width: 1280px) {
+  .footer {
+    background-position: left 290px;
+  }
   .wrapper-title {
     min-width: 500px;
   }
