--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -6,7 +6,12 @@
         <!-- <div class="grid" data-masonry='{ "itemSelector": ".grid-item", "columnWidth": 160 }'> -->
         <div class="grid-item grid-item--box1 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery1.png" />
+            <source srcset="../src/images/desktop/gallery/gallery1.png 1x, ../src/images/desktop/gallery/gallery1@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery1.png 1x, ../src/images/tablet/gallery/gallery1@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery1.png 1x, ../src/images/mobile/gallery/gallery1@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery1.png"
@@ -16,7 +21,12 @@
         </div>
         <div class="grid-item grid-item--box2 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery2.png" />
+            <source srcset="../src/images/desktop/gallery/gallery2.png 1x, ../src/images/desktop/gallery/gallery2@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery2.png 1x, ../src/images/tablet/gallery/gallery2@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery2.png 1x, ../src/images/mobile/gallery/gallery2@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery2.png"
@@ -25,8 +35,12 @@
           </picture>
         </div>
         <div class="grid-item grid-item--box3 _anim-items _anim-no-hide">
-          <picture>
-            <source srcset="../src/images/desktop/gallery/gallery3.png" />
+          <picture><source srcset="../src/images/desktop/gallery/gallery3.png 1x, ../src/images/desktop/gallery/gallery3@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery3.png 1x, ../src/images/tablet/gallery/gallery3@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery3.png 1x, ../src/images/mobile/gallery/gallery3@2x.png 2x" 
+            media="(min-width: 320px)" /><source srcset="../src/images/desktop/gallery/gallery3.png" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery3.png"
@@ -36,7 +50,12 @@
         </div>
         <div class="grid-item grid-item--box4 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery4.png" />
+            <source srcset="../src/images/desktop/gallery/gallery4.png 1x, ../src/images/desktop/gallery/gallery4@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery4.png 1x, ../src/images/tablet/gallery/gallery4@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery4.png 1x, ../src/images/mobile/gallery/gallery4@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery4.png"
@@ -46,7 +65,12 @@
         </div>
         <div class="grid-item grid-item--box5 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery5.png" />
+            <source srcset="../src/images/desktop/gallery/gallery5.png 1x, ../src/images/desktop/gallery/gallery5@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery5.png 1x, ../src/images/tablet/gallery/gallery5@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery5.png 1x, ../src/images/mobile/gallery/gallery5@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery5.png"
@@ -56,7 +80,12 @@
         </div>
         <div class="grid-item grid-item--box6 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery6.png" />
+            <source srcset="../src/images/desktop/gallery/gallery6.png 1x, ../src/images/desktop/gallery/gallery6@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery6.png 1x, ../src/images/tablet/gallery/gallery6@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery6.png 1x, ../src/images/mobile/gallery/gallery6@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery6.png"
@@ -66,7 +95,12 @@
         </div>
         <div class="grid-item grid-item--box7 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery7.png" />
+            <source srcset="../src/images/desktop/gallery/gallery7.png 1x, ../src/images/desktop/gallery/gallery7@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery7.png 1x, ../src/images/tablet/gallery/gallery7@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery7.png 1x, ../src/images/mobile/gallery/gallery7@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery7.png"
@@ -76,7 +110,12 @@
         </div>
         <div class="grid-item grid-item--box8 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery8.png" />
+            <source srcset="../src/images/desktop/gallery/gallery8.png 1x, ../src/images/desktop/gallery/gallery8@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery1.png 1x, ../src/images/tablet/gallery/gallery8@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery8.png 1x, ../src/images/mobile/gallery/gallery8@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery8.png"
@@ -86,7 +125,12 @@
         </div>
         <div class="grid-item grid-item--box9 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery9.png" />
+            <source srcset="../src/images/desktop/gallery/gallery9.png 1x, ../src/images/desktop/gallery/gallery9@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery9.png 1x, ../src/images/tablet/gallery/gallery9@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery9.png 1x, ../src/images/mobile/gallery/gallery9@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery9.png"
@@ -96,7 +140,12 @@
         </div>
         <div class="grid-item grid-item--box10 _anim-items _anim-no-hide">
           <picture>
-            <source srcset="../src/images/desktop/gallery/gallery10.png" />
+            <source srcset="../src/images/desktop/gallery/gallery10.png 1x, ../src/images/desktop/gallery/gallery10@2x.png 2x" 
+            media="(min-width: 1280px)" />
+            <source srcset="../src/images/tablet/gallery/gallery10.png 1x, ../src/images/tablet/gallery/gallery10@2x.png 2x" 
+            media="(min-width: 768px)" />
+            <source srcset="../src/images/mobile/gallery/gallery10.png 1x, ../src/images/mobile/gallery/gallery10@2x.png 2x" 
+            media="(min-width: 320px)" />
             <img
               class="gallery__visual-img"
               src="../src/images/desktop/gallery/gallery10.png"
