--- a/src/sass/layout/_reviews.scss
+++ b/src/sass/layout/_reviews.scss
@@ -5,6 +5,19 @@
   justify-content: center;
 }
 
+
+.reviews {
+  &__link--blue{
+  color: #2962ff;
+}
+  &__link--light-blue{
+    color: #3FACD5;
+}
+  &__link--green{
+    color: #7CCA3E;
+  }
+}
+
 .reviews {
   &__item {
     background-color: #f5f4fa;
@@ -32,10 +45,8 @@
     letter-spacing: 0.03em;
     text-transform: uppercase;
 
-    color: var(--accent-color);
-
     &:hover{
-        color: #000;
+        color: var(--accent-color);
         transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
 
@@ -43,6 +54,7 @@
         fill: var(--accent-color);
         transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
     }
+
   }
 
   &__client-link {
@@ -56,6 +68,11 @@
 
     color: #000;
     margin-bottom: 10px;
+
+    &:hover{
+      color: var(--accent-color);
+      transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  }
   }
   &__description {
     font-size: 14px;
