--- a/src/partials/oll.html
+++ b/src/partials/oll.html
@@ -7,7 +7,9 @@
 </head>
 <body>
     <div>
-        <h1>Hello</h1>
+        <h1>Hello Привет
+            
+        </h1>
     </div>
 </body>
 </html>
