Revert "Update oll.html"

--- a/src/partials/oll.html
+++ b/src/partials/oll.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div>
-        <h1 class="title">Hello Привет !!! """"
+        <h1 class="title">Hello Привет !!!
             
         </h1>
     </div>
