--- a/src/partials/oll.html
+++ b/src/partials/oll.html
@@ -8,7 +8,7 @@
 <body>
     <div>
         <h1 class="title">Hello Привет !!! """"
-            <p>SS</p>
+            <p>SS Галичина</p>
         </h1>
     </div>
 </body>
