--- a/src/partials/logo.html
+++ b/src/partials/logo.html
@@ -1,11 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>wwww</title>
 </head>
+
 <body>
-    
+    <a href="" class="logo">Web<span class="logo-text">Studio</span> </a>
+
 </body>
+
 </html>
