--- a/src/sass/_logo.scss
+++ b/src/sass/_logo.scss
@@ -1,6 +1,6 @@
 .logo {
     
-    color: var(--accent-text-colour);
+    color: tomato;
     font-family: Raleway, sans-serif;
     font-weight: 700;
     font-size: 24px;
