--- a/src/sass/main.css
+++ b/src/sass/main.css
@@ -4,8 +4,7 @@
  * Все паршалы подключаются сюда.
  */
 .example {
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell,
-    'Open Sans', 'Helvetica Neue', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   line-height: 1.5;
   background-color: #fff;
   color: #424242;
@@ -25,8 +24,43 @@
 
 .example .background {
   height: 240px;
-  background-image: url('../images/demo.jpg');
+  background-image: url("../images/demo.jpg");
   background-size: cover;
   background-position: center;
+}
+
+.title {
+  color: #009688;
+}
+
+.logo {
+  color: tomato;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 1.16;
+  text-decoration: none;
+}
+
+@media screen and (min-width: 1200px) {
+  .logo {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    font-size: 26px;
+    line-height: 1.19;
+  }
+}
+
+.logo-text {
+  color: #000000;
+  font-family: Raleway, sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.19;
+}
+
+.secondary-logo-studio {
+  color: var(--object-colour);
 }
 /*# sourceMappingURL=main.css.map */
