Site structure added

--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -6,3 +6,21 @@
 @import './base/normalize';
 
 @import './utils/variables';
+
+@import './base/common';
+
+@import './components/header';
+
+@import './components/hero';
+
+@import './components/about-us';
+
+@import './components/program';
+
+@import './components/reviews';
+
+@import './components/registration';
+
+@import './components/contact-form';
+
+@import './components/footer';
