--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -4,6 +4,5 @@
  */
 
 // Стили для файла с примером HTML-фрагмента
-@import './example';
-@import "./common.scss";
-@import "./variables.scss";
+@import './common';
+@import './variables';
