--- a/src/partials/example.html
+++ b/src/partials/example.html
@@ -1,9 +1,9 @@
-<article class="example">
-  <h1>HTML-фрагменты</h1>
+<!-- <article class="example">
+  <h1>HTML-фрагменты</h1> -->
 
-  <!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
-  <img src="images/demo.jpg" alt="" width="320" />
-  <p>
+<!-- Путь к изображениям из HTML-фрагмента такой, как из файла index.html -->
+<!-- <img src="images/demo.jpg" alt="" width="320" /> -->
+<!-- <p>
     Плагин
     <a
       href="https://github.com/posthtml/posthtml-include"
@@ -30,4 +30,4 @@
   </p>
 
   <div class="background"></div>
-</article>
+</article> -->
