--- a/src/sass/base/_common.scss
+++ b/src/sass/base/_common.scss
@@ -1,3 +1,9 @@
+body {
+  background-color: $white;
+  color: $text;
+  font-family: Montserrat;
+}
+
 .container {
   max-width: 320px;
   padding: 15px 0;
