Добавляет стили в секцию Program для tablet

--- a/src/sass/components/_program.scss
+++ b/src/sass/components/_program.scss
@@ -1,3 +1,33 @@
 // .icon{
 //     fill: black;
 // }
+.container-program{
+    @media screen and (min-width:$tablet) {
+        display: flex;
+    flex-direction: row;
+    margin-top: -38px;
+    margin-left: -38px;
+    }
+}
+.container-program__item{
+    @media screen and (min-width:$tablet){
+        margin-top: 38px;
+    margin-left: 38px;
+    flex-basis: calc((100% - 38px * 2) / 2);
+    }
+}
+
+.program-details__list{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin: 0px;
+    padding: 0px;
+    list-style: none;
+}
+
+.program-details__item{
+    display: block;
+    background-color: brown;
+    margin: 5px;
+}
